# mpi-lab

./: .gitignore  CMakeLists.txt  mpigo.sh  pickprocess.sh
include/c/: common_c.h
include/cpp/: common_cpp.h  myheap.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/c/: common_c.c
src/common/cpp/: common_cpp.cpp
src/mpi/: CMakeLists.txt
src/mpi/collective/: allgather.c  avg.c  mybcast.c
src/mpi/dynamic/: check_status.c  random_walk.cpp
src/mpi/sendrecv/: helloworld.c  pingpong.c  ring.c  sendrecv.c  sendrecv2.c
src/mpi/sort/: kmerge.cpp  kmergef.cpp  kmergef_mpi.cpp  kmergef_mpi2.cpp  oddeven.cpp  oddevensort.c  psrs.cpp  psrs_out.cpp  validate.c
src/predata/: CMakeLists.txt  cxdata.c  rvdata.c  rxdata.c  txdata.c
test/: CMakeLists.txt
test/misc/: createapp.cpp  fltprec.c  fs.cpp  genseq.c  ifstreamsptr.cpp  intercept.cpp  iomanip.cpp  lessread.cpp  multihead.cpp  opthook.c  reftest.cpp  sort.cpp  truncate.cpp
test/mpi/: alltoall.c  alltoallv.c  bcast_test.c  gatherv.c  scatter_discard.c  selfrecv.c  uneven_gather.c
