CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(mpisort)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/bin) # binary executable

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 14)

# set mpich wrapper before FIND_PACKAGE
SET(MPI_C_COMPILER mpicc)
SET(MPI_CXX_COMPILER mpicxx)

FIND_PACKAGE(MPI REQUIRED)
INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(include/c)
INCLUDE_DIRECTORIES(include/cpp)


ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
