CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(mpisort)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/bin) # binary executable

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 17)

# set mpich wrapper before FIND_PACKAGE
SET(MPI_C_COMPILER mpicc)
SET(MPI_CXX_COMPILER mpicxx)

FIND_PACKAGE(MPI REQUIRED)
INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(include/c)
INCLUDE_DIRECTORIES(include/cpp)


OPTION(USE_INT "use int data type" OFF)
OPTION(USE_FLT "use int float type" OFF)

IF((USE_INT AND USE_FLT) OR (NOT USE_INT AND NOT USE_FLT))
    MESSAGE(FATAL_ERROR "must specify only 1 data type [USE_INT|USE_FLT]")
ENDIF()

IF(USE_INT)
    MESSAGE("template for int")
    ADD_DEFINITIONS(-DUSE_INT)
ENDIF()
IF(USE_FLT)
    MESSAGE("template for float")
    ADD_DEFINITIONS(-DUSE_FLT)
ENDIF()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
